Shenandoah: Do not modify update-watermark concurrently

XMLWordPrintable

    • gc
    • b15
    • generic
    • generic
    • Not verified

        JDK-8240873 introduced short-cutting arraycopy-barriers on objects beyond the update-watermark. Concurrently updating the update-watermark after a region has been completely updated proves problematic: we see various different crashes related to this. Strengthening the fences around it doesn't fully solve the problem, apparently the problem is deeper. It doesn't seem worth to keep doing this for very little gain.

              Assignee:
              Roman Kennke
              Reporter:
              Roman Kennke
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: