8241081: Shenandoah: Do not modify update-watermark concurrently

Reviewed-by: shade